--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -68,7 +68,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"V1.5.Deliberate_1.1\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\"]\n",
+        "SDZ_Download_Model = \"V1.5.Deliberate_1.1\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -79,7 +79,7 @@
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
-        "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
+        "SDZ_Big_Models = True\n",
         "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
@@ -138,97 +138,105 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  %cd models/Stable-diffusion\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
-        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.B\":\n",
-        "    !wget https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.inpaint\":\n",
-        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.pix2pix\":\n",
-        "    !wget https://huggingface.co/timbrooks/instruct-pix2pix/resolve/main/instruct-pix2pix-00-22000.safetensors -O v15pix2pix.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/timbrooks/instruct-pix2pix/resolve/main/instruct-pix2pix-00-22000.safetensors -O v15pix2pix.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V2.1\":\n",
-        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V2.1.Perfect_World_Vae\":\n",
-        "    !wget https://civitai.com/api/download/models/11182 -O 21Perfect_World_Vae.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/11182 -O 21Perfect_World_Vae.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Deliberate_1.1\":\n",
-        "    !wget https://civitai.com/api/download/models/5616 -O 15Deliberate_1.1.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5616 -O 15Deliberate_1.1.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.URPM\":\n",
-        "    !wget https://civitai.com/api/download/models/4971 -O 15URPM.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/4971 -O 15URPM.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.RL114\":\n",
-        "    !wget https://civitai.com/api/download/models/9954 -O 15RL114.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/9954 -O 15RL114.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Blacked\":\n",
-        "    !wget https://civitai.com/api/download/models/1262 -O 15Blacked.ckpt\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/1262 -O 15Blacked.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.MajorXBJPOV\":\n",
-        "    !wget https://civitai.com/api/download/models/4572 -O 15MajorXBJPOV.ckpt\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/4572 -O 15MajorXBJPOV.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.StandingBJ\":\n",
-        "    !wget https://civitai.com/api/download/models/4276 -O 15StandingBJ.ckpt\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/4276 -O 15StandingBJ.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.OcaTitfuck\":\n",
-        "    !wget https://civitai.com/api/download/models/1690 -O 15OcaTitfuck.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/1690 -O 15OcaTitfuck.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.PoVSkinTexture34\":\n",
-        "    !wget https://civitai.com/api/download/models/5079 -O 15PoVSkinTexturer34LucidBlack.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5079 -O 15PoVSkinTexturer34LucidBlack.safetensors\n",
         "  \n",
         "  elif SDZ_Download_Model == \"V1.5.PoVSkinTextureDream\":\n",
-        "    !wget https://civitai.com/api/download/models/5097 -O 15PoVSkinTexturer34Dreamlike.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5097 -O 15PoVSkinTexturer34Dreamlike.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Protogenx5.3\":\n",
-        "    !wget https://civitai.com/api/download/models/4229 -O 15Protogenx5.3.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/4229 -O 15Protogenx5.3.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.RealisticVisionV1.3\":\n",
-        "    !wget https://civitai.com/api/download/models/6987 -O 15RealisticVisionV1.3.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/6987 -O 15RealisticVisionV1.3.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Dreamlike_Hassan\":\n",
-        "    !wget https://civitai.com/api/download/models/8939 -O 15Dreamlike_Hassan.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/8939 -O 15Dreamlike_Hassan.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.DDosMix\":\n",
-        "    !wget https://civitai.com/api/download/models/12183 -O 15DDosMix.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/12183 -O 15DDosMix.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Clarity_19\":\n",
-        "    !wget https://civitai.com/api/download/models/13128 -O 15clarity_19.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/13128 -O 15clarity_19.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.TsXxx_v10\":\n",
-        "    !wget https://civitai.com/api/download/models/14225 -O 15tsXxx_v10.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/14225 -O 15tsXxx_v10.safetensors\n",
         "  \n",
         "  elif SDZ_Download_Model == \"V1.5.Magnum_v10\":\n",
-        "    !wget https://civitai.com/api/download/models/15153 -O 15Magnum_v10.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/15153 -O 15Magnum_v10.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.PuffyPussy_10\":\n",
-        "    !wget https://civitai.com/api/download/models/13636 -O 15puffyPussy_10.ckpt\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/13636 -O 15puffyPussy_10.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.DoctorDiffusionV08\":\n",
-        "    !wget https://civitai.com/api/download/models/13621 -O 15doctorDiffusionV08.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/13621 -O 15doctorDiffusionV08.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.lazymixRealAmateur_v10\":\n",
-        "    !wget https://civitai.com/api/download/models/12996 -O 15lazymixRealAmateur_v10.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/12996 -O 15lazymixRealAmateur_v10.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.DarelitesFantasyMix\":\n",
-        "    !wget https://civitai.com/api/download/models/13592 -O 15darelitesFantasyMix_.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/13592 -O 15darelitesFantasyMix_.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Duchaitensupercute_V11\":\n",
-        "    !wget https://civitai.com/api/download/models/13124 -O 15duchaitensupercute_V11.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/13124 -O 15duchaitensupercute_V11.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Chikmix_V1\":\n",
-        "    !wget https://civitai.com/api/download/models/11727 -O 15chikmix_V1.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/11727 -O 15chikmix_V1.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.TheAllysMixIII_v10\":\n",
-        "    !wget https://civitai.com/api/download/models/12763 -O 15theAllysMixIII_v10.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/12763 -O 15theAllysMixIII_v10.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.ConsistentFactor444p_v10\":\n",
-        "    !wget https://civitai.com/api/download/models/10773 -O 15consistentFactor444p_v10.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/10773 -O 15consistentFactor444p_v10.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.AnalogMadnessV11\":\n",
-        "    !wget https://civitai.com/api/download/models/9519 -O 15analogMadnessV11.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/9519 -O 15analogMadnessV11.safetensors\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.abyssorangemix2_Hard\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5038 -O abyssorangemix2_Hard.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5038?type=VAE -O orangemix.vae.pt\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.abyssorangemix2_NSFW\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5036 -O abyssorangemix2NSFW.safetensors.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5036?type=VAE -O orangemix.vae.pt\n",
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
@@ -240,11 +248,19 @@
         "    %cd models/VAE\n",
         "    !wget --timestamping https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\n",
         "    %cd ..\n",
+        "\n",
         "    if not os.path.exists('Lora'):\n",
         "        os.makedirs('Lora')\n",
         "    %cd Lora\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/16576 -O to8contrast-style.safetensors\n",
         "    !wget --timestamping https://civitai.com/api/download/models/16576\n",
         "    %cd ../..\n",
+        "\n",
+        "    %cd embeddings\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/9208 -O easynegative.safetensors\n",
+        "    !wget --timestamping https://cdn.discordapp.com/attachments/1032948846197747731/1069660323709190195/bad-hands-5.pt -O bad-hands-5.pt\n",
+        "    %cd ..\n",
+        "\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
