--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -68,7 +68,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"V1.5.Deliberate_1.1\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
+        "SDZ_Download_Model = \"V1.5.Deliberate_1.1\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -80,7 +80,7 @@
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = True\n",
-        "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
+        "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -123,16 +123,16 @@
         "# SDZ_Requirements\n",
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
-        "  import os\n",
-        "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "  !pip install triton==2.0.0.dev20221202.\n",
+        "  #import os\n",
+        "  #os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "  #!pip install triton==2.0.0.dev20221202.\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
+        "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "\n",
-        "  %cd models/Stable-diffusion\n",
-        "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
+        "  #%cd models/Stable-diffusion\n",
+        "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
         "    #!pip install xformers==0.0.16rc425\n",
-        "    !pip install open-clip-torch\n",
+        "    #!pip install open-clip-torch\n",
         "\n",
         "# SDZ_Models\n",
         "  os.chdir(SDZ_webui_path)\n",
@@ -157,6 +157,9 @@
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Deliberate_1.1\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/5616 -O 15Deliberate_1.1.safetensors\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/15236 -O 15Deliberate_2.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.URPM\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/4971 -O 15URPM.safetensors\n",
@@ -253,7 +256,6 @@
         "        os.makedirs('Lora')\n",
         "    %cd Lora\n",
         "    !wget --timestamping https://civitai.com/api/download/models/16576 -O to8contrast-style.safetensors\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/16576\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
@@ -303,7 +305,7 @@
         "    %cd ../../..\n",
         "\n",
         "# SDZ_Upscalers\n",
-        "  if SDZ_Upscaler:\n",
+        "  if SDZ_Upscalers:\n",
         "    os.chdir(SDZ_webui_path+'/'+'models')\n",
         "\n",
         "    if not os.path.exists('ESRGAN'):\n",
