--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -123,11 +123,11 @@
         "# SDZ_Requirements\n",
         "with capture.capture_output() as cap:\n",
         "  os.chdir(SDZ_webui_path)\n",
-        "  #import os\n",
-        "  #os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "  import os\n",
+        "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
+        "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "\n",
         "  #%cd models/Stable-diffusion\n",
         "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
