--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -68,19 +68,19 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"]\n",
+        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5.B\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▥</font>\n",
         "SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
-        "SDZ_Training = \"\" #@param [\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"]\n",
+        "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
-        "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
-        "SDZ_Loctunl = False #@param {type:\"boolean\"}\n",
+        "SDZ_Big_Models = True\n",
+        "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -125,33 +125,51 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "  !pip install triton==2.0.0.dev20221202.\n",
+        "  #!pip install triton==2.0.0.dev20221202.\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "\n",
-        "  %cd models/Stable-diffusion\n",
-        "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
-        "    !pip install xformers==0.0.16rc425\n",
-        "    !pip install open-clip-torch\n",
+        "  #%cd models/Stable-diffusion\n",
+        "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
+        "    #!pip install xformers==0.0.16rc425\n",
+        "    #!pip install open-clip-torch\n",
         "\n",
         "# SDZ_Models\n",
         "  os.chdir(SDZ_webui_path)\n",
         "  %cd models/Stable-diffusion\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
-        "    !wget https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.B\":\n",
+        "    !wget --timestamping https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.inpaint\":\n",
-        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.pix2pix\":\n",
-        "    !wget https://huggingface.co/timbrooks/instruct-pix2pix/resolve/main/instruct-pix2pix-00-22000.safetensors -O v15pix2pix.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/timbrooks/instruct-pix2pix/resolve/main/instruct-pix2pix-00-22000.safetensors -O v15pix2pix.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V2.1\":\n",
-        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
         "\n",
         "# SDZ_Extensions\n",
         "  if SDZ_Extensions:\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "    %cd models/VAE\n",
+        "    !wget --timestamping https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\n",
+        "    %cd ..\n",
+        "\n",
+        "    if not os.path.exists('Lora'):\n",
+        "        os.makedirs('Lora')\n",
+        "    %cd Lora\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/16576 -O to8contrast-style.safetensors\n",
+        "    %cd ../..\n",
+        "\n",
+        "    %cd embeddings\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/9208 -O easynegative.safetensors\n",
+        "    !wget --timestamping https://cdn.discordapp.com/attachments/1032948846197747731/1069660323709190195/bad-hands-5.pt -O bad-hands-5.pt\n",
+        "    %cd ..\n",
+        "\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
@@ -159,6 +177,12 @@
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
         "    !git clone https://github.com/fkunn1326/openpose-editor.git\n",
         "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
+        "    !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
+        "    !git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
+        "    !git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
+        "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
+        "    !git clone https://github.com/hnmr293/posex.git\n",
+        "    !git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
@@ -176,14 +200,19 @@
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_openpose-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_scribble-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_seg-fp16.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_canny-fp16.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_color-fp16.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_depth-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_keypose-fp16.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_openpose-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_style-fp16.safetensors\n",
         "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
         "    %cd ../../..\n",
         "\n",
         "# SDZ_Upscalers\n",
-        "  if SDZ_Upscaler:\n",
+        "  if SDZ_Upscalers:\n",
         "    os.chdir(SDZ_webui_path+'/'+'models')\n",
         "\n",
         "    if not os.path.exists('ESRGAN'):\n",
@@ -211,25 +240,27 @@
         "                os.system('wget --timestamping -P SwinIR {}'.format(link))\n",
         "\n",
         "# SDZ_Training\n",
-        "  if SDZ_Training == \"Kohya\":\n",
+        "  if SDZ_Training == \"New_Dreambooth - Kohya\":\n",
         "    os.chdir(SDZ_webui_path)\n",
+        "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
+        "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "      !bash ./py310.sh -b -f -p /usr/local\n",
+        "      !python -m ipykernel install --name \"py310\" --user\n",
+        "      !pip install open-clip-torch\n",
+        "      !pip install triton\n",
+        "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
-        "    %cd ..\n",
-        "\n",
-        "  elif SDZ_Training == \"New_Dreambooth\":\n",
-        "    os.chdir(SDZ_webui_path)\n",
-        "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
-        "    \n",
+        "    !pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 -f https://download.pytorch.org/whl/cu117/torch_stable.html\n",
+        "\n",
         "  elif SDZ_Training == \"Old_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
         "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
         "      !bash ./py310.sh -b -f -p /usr/local\n",
         "      !python -m ipykernel install --name \"py310\" --user\n",
-        "      !conda install -c \"xformers/label/dev\" xformers -y\n",
         "      !pip install open-clip-torch\n",
         "      !pip install triton\n",
         "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
@@ -249,26 +280,32 @@
         "    SDZ_Training == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
+        "  if SDZ_Big_Models:\n",
+        "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    \n",
+        "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
+        "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
+        "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
+        "  else:\n",
+        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "    !sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "\n",
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
         "if SDZ_Version == \"V1.5\":\n",
-        "  if SDZ_Loctunl == True:\n",
         "    !nohup lt -p 7860 > lt.log 2>&1 &\n",
         "    time.sleep(3)\n",
         "    webui_link = getLink(SDZ_webui_path+'/'+'lt.log')\n",
         "    print(webui_link)\n",
         "    !python launch.py $share\n",
-        "  else:\n",
-        "    !python launch.py $share\n",
+        "\n",
         "elif SDZ_Version == \"V2.1\":\n",
-        "  if SDZ_Loctunl == True:\n",
         "    !nohup lt -p 7860 > lt.log 2>&1 &\n",
         "    time.sleep(3)\n",
         "    webui_link = getLink(SDZ_webui_path+'/'+'lt.log')\n",
         "    print(webui_link)\n",
-        "    !python launch.py $share SDZconfigV2\n",
-        "  else:\n",
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
