--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -138,7 +138,7 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  %cd models/Stable-diffusion\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
-        "    !wget --timestamping https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.B\":\n",
         "    !wget --timestamping https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
