--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -255,7 +255,8 @@
         "    if not os.path.exists('Lora'):\n",
         "        os.makedirs('Lora')\n",
         "    %cd Lora\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/16576 -O to8contrast-style.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/16576\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/10350\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
@@ -402,7 +403,6 @@
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "p0WPkwREmtD3"
       },
       "execution_count": null,
