--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -249,19 +249,20 @@
         "  if SDZ_Extensions:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd models/VAE\n",
-        "    !wget --timestamping https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt\n",
         "    %cd ..\n",
         "\n",
         "    if not os.path.exists('Lora'):\n",
         "        os.makedirs('Lora')\n",
         "    %cd Lora\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/16576\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/10350\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/9208 -O easynegative.safetensors\n",
-        "    !wget --timestamping https://cdn.discordapp.com/attachments/1032948846197747731/1069660323709190195/bad-hands-5.pt -O bad-hands-5.pt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
@@ -403,6 +404,7 @@
         "    !python launch.py $share SDZconfigV2"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "p0WPkwREmtD3"
       },
       "execution_count": null,
