--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -54,7 +54,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use4.png?raw=true' height=\"50\" alt=\"netdata\"/></center></font></a> \n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"50\" alt=\"netdata\"/></center></font></a> \n",
         "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
@@ -68,7 +68,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5.B\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"]\n",
+        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -141,7 +141,7 @@
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.B\":\n",
-        "    !wget --timestamping https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-pruned-emaonly.safetensors -O v15B.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.inpaint\":\n",
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
@@ -156,18 +156,20 @@
         "  if SDZ_Extensions:\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd models/VAE\n",
-        "    !wget --timestamping https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt\n",
         "    %cd ..\n",
         "\n",
         "    if not os.path.exists('Lora'):\n",
         "        os.makedirs('Lora')\n",
         "    %cd Lora\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/16576 -O to8contrast-style.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/9208 -O easynegative.safetensors\n",
-        "    !wget --timestamping https://cdn.discordapp.com/attachments/1032948846197747731/1069660323709190195/bad-hands-5.pt -O bad-hands-5.pt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/bad-hands-5.pt\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/embeddings/easynegative.safetensors\n",
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
