--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -21,12 +21,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Y9EBc437WDOs",
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "76164e2e-a00f-47bf-ee3e-b76db96e6ea6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1;32mDrive Connected ✓\n"
+          ]
+        }
+      ],
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "from IPython.display import clear_output\n",
@@ -68,7 +80,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"V1.5.Deliberate_1.1\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
+        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -82,7 +94,7 @@
         "SDZ_Big_Models = True\n",
         "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "\n",
@@ -279,6 +291,11 @@
         "    !git clone https://github.com/hnmr293/posex.git\n",
         "    !git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
         "    !git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
+        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
+        "    !git clone https://github.com/s9roll7/ebsynth_utility.git\n",
+        "    !git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
+        "    !git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
+        "    !git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
@@ -416,7 +433,6 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
