--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -80,7 +80,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" #@param {type:\"string\"} \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
+        "SDZ_Download_Model = \"V1.5.abyssorangemix2_Hard\" #@param [\"\", \"V1.5\", \"V1.5.B\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\", \"V2.1.Perfect_World_Vae\", \"V1.5.Deliberate_1.1\", \"V1.5.Deliberate_2\", \"V1.5.URPM\", \"V1.5.RL114\", \"V1.5.Blacked\", \"V1.5.MajorXBJPOV\", \"V1.5.StandingBJ\", \"V1.5.OcaTitfuck\", \"V1.5.PoVSkinTexture34\", \"V1.5.PoVSkinTextureDream\", \"V1.5.Protogenx5.3\", \"V1.5.RealisticVisionV1.3\", \"V1.5.Dreamlike_Hassan\", \"V1.5.DDosMix\", \"V1.5.Clarity_19\", \"V1.5.TsXxx_v10\", \"V1.5.Magnum_v10\", \"V1.5.PuffyPussy_10\", \"V1.5.DoctorDiffusionV08\", \"V1.5.lazymixRealAmateur_v10\", \"V1.5.DarelitesFantasyMix\", \"V1.5.Duchaitensupercute_V11\", \"V1.5.Chikmix_V1\", \"V1.5.TheAllysMixIII_v10\", \"V1.5.ConsistentFactor444p_v10\", \"V1.5.AnalogMadnessV11\", \"V1.5.abyssorangemix2_Hard\", \"V1.5.abyssorangemix2_NSFW\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "os.chdir(SDZ_install)\n",
@@ -89,12 +89,12 @@
         "SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
-        "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
-        "SDZ_ControlNet = False #@param {type:\"boolean\"}\n",
+        "SDZ_Extensions = True #@param {type:\"boolean\"}\n",
+        "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = True\n",
         "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "\n",
@@ -138,8 +138,8 @@
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
+        "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
-        "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "\n",
         "  #%cd models/Stable-diffusion\n",
         "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
@@ -297,6 +297,8 @@
         "    !git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
         "    !git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
+        "    !sed -i 's/1, \"Multi ControlNet: Max models amount (requires restart)\", gr.Slider, {\"minimum\": 1, \"maximum\": 10, \"step\": 1}, section=section))/4, \"Multi ControlNet: Max models amount (requires restart)\", gr.Slider, {\"minimum\": 1, \"maximum\": 10, \"step\": 1}, section=section))/' $SDZ_install'stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
+        "    !sed -i 's/False, \"Allow other script to control this extension\", gr.Checkbox, {\"interactive\": True}, section=section))/True, \"Allow other script to control this extension\", gr.Checkbox, {\"interactive\": True}, section=section))/' $SDZ_install'stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
         "    %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
