--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -21,24 +21,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Y9EBc437WDOs",
-        "cellView": "form",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "76164e2e-a00f-47bf-ee3e-b76db96e6ea6"
+        "cellView": "form"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1;32mDrive Connected ✓\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "from IPython.display import clear_output\n",
@@ -66,7 +54,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"50\" alt=\"netdata\"/></center></font></a> \n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> \n",
         "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
@@ -92,11 +80,11 @@
         "SDZ_Extensions = True #@param {type:\"boolean\"}\n",
         "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = True\n",
-        "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
+        "SDZ_Upscalers = True #@param {type:\"boolean\"}\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
+        "share = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "\n",
         "def getLink(path):\n",
         "  with open(path, 'r') as testwritefile:\n",
@@ -289,16 +277,14 @@
         "    !git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
         "    !git clone https://github.com/alemelis/sd-webui-ar.git\n",
         "    !git clone https://github.com/hnmr293/posex.git\n",
-        "    !git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
+        "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
         "    !git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
-        "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
-        "    !git clone https://github.com/s9roll7/ebsynth_utility.git\n",
-        "    !git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
-        "    !git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
-        "    !git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
+        "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
+        "    #!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
+        "    #!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
+        "    #!git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
+        "    #!git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
-        "    !sed -i 's/1, \"Multi ControlNet: Max models amount (requires restart)\", gr.Slider, {\"minimum\": 1, \"maximum\": 10, \"step\": 1}, section=section))/4, \"Multi ControlNet: Max models amount (requires restart)\", gr.Slider, {\"minimum\": 1, \"maximum\": 10, \"step\": 1}, section=section))/' $SDZ_install'stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
-        "    !sed -i 's/False, \"Allow other script to control this extension\", gr.Checkbox, {\"interactive\": True}, section=section))/True, \"Allow other script to control this extension\", gr.Checkbox, {\"interactive\": True}, section=section))/' $SDZ_install'stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
         "    %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
@@ -306,6 +292,9 @@
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
+        "    !sed -i 's/max_models = shared.opts.data.get(\"control_net_max_models_num\", 1)/max_models = shared.opts.data.get(\"control_net_max_models_num\", 4)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
+        "    !sed -i 's/1, \"Multi ControlNet/4, \"Multi ControlNet/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
+        "    !sed -i 's/False, \"Allow other script to control this extension/True, \"Allow other script to control this extension/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
         "    %cd sd-webui-controlnet/models\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors\n",
         "    !wget --timestamping https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors\n",
