--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -84,7 +84,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "share = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
+        "share = \"--share --api --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" + \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "\n",
         "def getLink(path):\n",
         "  with open(path, 'r') as testwritefile:\n",
