--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -385,15 +385,16 @@
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  if SDZ_Big_Models:\n",
+        "\n",
+        "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "    !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
-        "    \n",
         "    !sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
         "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
         "    !sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
         "  else:\n",
-        "    !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
-        "    !sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
+        "    #!sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
+        "    #!sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "\n",
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
