--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -284,6 +284,7 @@
         "    #!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
         "    #!git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
         "    #!git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
+        "    !git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "    %cd ..\n",
         "\n",
