--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -590,11 +590,11 @@
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.abyssorangemix2_Hard\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/5038 -O abyssorangemix2_Hard.safetensors\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/5038?type=VAE -O orangemix.vae.pt\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5038?type=VAE -O ../vae/orangemix.vae.pt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.abyssorangemix2_NSFW\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/5036 -O abyssorangemix2NSFW.safetensors.safetensors\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/5036?type=VAE -O orangemix.vae.pt\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/5036?type=VAE -O ../vae/orangemix.vae.pt\n",
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
