--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -125,15 +125,15 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "  !pip install triton\n",
+        "  #!pip install triton\n",
         "  #!pip install triton==2.0.0.dev20221202.\n",
         "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "\n",
         "  #%cd models/Stable-diffusion\n",
-        "  if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
+        "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
         "    #!pip install xformers==0.0.16rc425\n",
-        "    !pip install open-clip-torch\n",
+        "    #!pip install open-clip-torch\n",
         "\n",
         "# SDZ_Models\n",
         "  os.chdir(SDZ_webui_path)\n",
