--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -425,6 +425,43 @@
     {
       "cell_type": "code",
       "source": [
+        "#Download Custom Model\n",
+        "import os\n",
+        "%store -r\n",
+        "\n",
+        "os.chdir(root_dir)\n",
+        "\n",
+        "#@markdown ### Custom model\n",
+        "modelUrl = \"https://civitai.com/api/download/models/5036?type=VAE\" #@param {'type': 'string'}\n",
+        "\n",
+        "def install(url):\n",
+        "  base_name = os.path.basename(url)\n",
+        "\n",
+        "  if url.startswith(\"https://drive.google.com\"):\n",
+        "    os.chdir(pretrained_model)\n",
+        "    !gdown --fuzzy {url}\n",
+        "  elif url.startswith(\"https://huggingface.co/\"):\n",
+        "    if '/blob/' in url:\n",
+        "      url = url.replace('/blob/', '/resolve/')\n",
+        "\n",
+        "    hf_token = '' #@param {type:\"string\"}\n",
+        "    user_header = f\"\\\"Authorization: Bearer {hf_token}\\\"\"\n",
+        "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
+        "  else:\n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "\n",
+        "install(modelUrl)\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "gL8_b6GB242q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
         "from IPython.display import clear_output\n",
